--- a/greymatter/res/column.css
+++ b/greymatter/res/column.css
@@ -12,26 +12,43 @@ Grey Matter CSS Styles
 	font-size: 75%;
 	height:1%;
 	margin-bottom: 5px;
-	padding: 10px;
 }
 
 #column h4 {
 	/* Titles of the sections */
-	margin-bottom: .5em;
+	text-transform: uppercase;
+	font-size: 14px;
+	font-weight: 700;
+	padding: 0 0 10px 50px;
+	margin-left: -50px;
+	display: inline-block;
+	border-bottom: 1px solid #c00;
 }
 
 #column p, #column div { margin: 10px 5px }
 
-#column a:link, #column a:visited { color: gray }
+#column a:link {
+	color: #fc0;
+	text-decoration: none;
+	-webkit-transition: all .25s;
+	-moz-transition: all .25s;
+	-o-transition: all .25s;
+	transition: all .25s;
+}
+
+#column a:visited { color: #fc0 }
+
+#column a:hover{
+	color: #f90;
+	text-decoration: none
+}
 
 /* === List === */
 #column ul li table { font-size: 100% }
 
 #column ul {
 	list-style-type: none;
-	margin-right: 10px;
 	margin-bottom: .5em;
-	padding-left: 1em
 }
 
 #column fieldset { margin: 0 5px 0 5px }
