--- a/greymatter/res/style.css
+++ b/greymatter/res/style.css
@@ -12,7 +12,7 @@ Grey Matter CSS Styles
 @import url(column.css);
 
 /* defines rules specific to the front page */
-body { margin: 80px 0 0 0 }
+body { padding: 30px 0 0 0 }
 
 #comments li.comment-admin {
 	padding:1em
