--- a/greymatter/res/common.css
+++ b/greymatter/res/common.css
@@ -38,7 +38,7 @@ blockquote {
 
 pre, code {
 	font-family: Lucida Console, Monaco, monospace;
-	font-size: 90%;
+	font-size: 70%;
 }
 
 pre {
@@ -114,7 +114,7 @@ a:hover {
 /* ===== HEADERS TAGS ===== */
 h1 {
 	/* Title of the blog */
-	font-size: 2em;
+	font-size: 2.2em;
 	letter-spacing: 2px;
 	margin: 0 0 0 0
 }
@@ -242,6 +242,8 @@ h4 {
 	.entry {
 		margin: 0 0 1.5em 0;
 		padding: 0;
+		border-bottom: 1px solid #555;
+		box-shadow: 0 0.9px 0 #2f2f2f;
 		overflow: auto; /* floating images fix IE<7*/
 	}
 	
@@ -288,5 +290,4 @@ h4 {
 	font-size: 80%;
 	color: #888;
 	padding: 5px;
-	border-top: #bbb 1px solid
 }
