--- a/greymatter/res/common.css
+++ b/greymatter/res/common.css
@@ -125,10 +125,9 @@ h3 {
 	/* Titles of the entry */
 	font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 1.5em;
-	color: #fc0 !important;
-	margin: 0;
-	font-weight: bold;
-	margin-bottom: 0.83em;
+	margin-left: 10px;
+	margin-bottom: 15px;
+	margin-top: 10px;
 }
 
 h4 {
@@ -198,7 +197,8 @@ h4 {
 
 #main p {
 	line-height: 1.5em;
-	margin-top: 21px;
+	margin-top: 10px;
+	margin-left: 20px;
 	color: #ddd;
 }
 
@@ -252,15 +252,14 @@ h4 {
 	}
 	/* end of .entry */
 	
-	#main ul.entry-header { /*  entry footer */
+	#main div.entry-header { /*  entry footer */
 		clear: both;
 		font-size: 80%;
 		color: #ddd;
-		margin: 0em 0 0em 0;
-		text-align: left;
+		text-align: right;
 	}
 	
-	.entry-header li { 
+	.entry-header div { 
 		display: block;
 	}
 	
@@ -290,4 +289,38 @@ h4 {
 	font-size: 80%;
 	color: #888;
 	padding: 5px;
+}
+
+span.post-category {
+	display: inline-block;
+	font-weight: bold;
+	color:white;
+	position: absolute;
+	margin-left: -22px;
+	padding: 6px 10px 8px;
+	padding-left: 30px;
+	-webkit-border-radius: 0 5px 5px 0;
+	-moz-border-radius: 0 5px 5px 0;
+	border-radius: 0 5px 5px 0;
+	-webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 -1px 0 rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 -1px 0 rgba(0, 0, 0, 0.3);
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 -1px 0 rgba(0, 0, 0, 0.3);
+	background-color: #9e2812;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#9e2812), to(#6f0d0d));
+	background-image: -webkit-linear-gradient(top, #9e2812 0%, #6f0d0d 100%);
+	background-image: -moz-linear-gradient(top, #9e2812 0%, #6f0d0d 100%);
+	background-image: -o-linear-gradient(top, #9e2812 0%, #6f0d0d 100%);
+	background-image: linear-gradient(to bottom, #9e2812 0%, #6f0d0d 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9e2812', endColorstr='#6f0d0d',GradientType=0 );
+}
+
+.post-category:before {
+	content: "";
+	position: absolute;
+	top: -10px; left: 0;
+	border-color: transparent #6f0d0d #6f0d0d transparent;
+	border-style: solid;
+	border-width: 5px;
+	width: 0;
+	height: 0;
 }
