--- a/greymatter/res/common.css
+++ b/greymatter/res/common.css
@@ -135,24 +135,10 @@ h4 {
 	color: #ddd;
 	 }
 
-
-
-/* ===== DIV CONTAINER ALL ELEMENTS BLOCK ===== */
-#body-container {
-	text-align: left;
-	width: 100%;
-	max-width: 978px;
-	margin: 0 auto 0 auto;
-	padding: 5px;
-	background-color: #333
-}
-
-
-
 /* ===== HEAD ===== */
 #head {
 	text-align: left;
-	width: 100%;
+	width: 90%;
 	max-width: 978px;
 	margin: 0 auto 0 auto;
 	font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -169,8 +155,6 @@ h4 {
 		margin: .5em 0 0 0
 	}
 
-
-
 /* ===== DIV CONTAINER "MAIN" ===== */
 #outer-container {
 	position: relative;
@@ -180,20 +164,56 @@ h4 {
 	background-color: #444
 }
 
+/* ===== NORMAL DESIGN ===== */
+@media (min-width: 720px) {
 
-
-/* ===== MAIN ===== */
-#main h4 { margin: 2em 0 0 0}
-
-#main {
-	float:left;
-	position: relative;
-	width: 74%;
-	font-size: 100%;
-	padding: 12px;
-	background-color: #444;
-	border-radius: 15px;
+	/* ===== DIV CONTAINER ALL ELEMENTS BLOCK ===== */
+	#body-container {
+	text-align: left;
+	width: 100%;
+	max-width: 978px;
+	margin: 0 auto 0 auto;
+	padding: 5px;
+	background-color: #333
 }
+
+	/* ===== MAIN ===== */
+	#main {
+		float:left;
+		position: relative;
+		width: 74%;
+		font-size: 100%;
+		padding: 12px;
+		background-color: #444;
+		border-radius: 15px;
+	}
+}
+
+/* ===== RESPONSIVE DESIGN ===== */
+@media (max-width: 719px) {
+
+	/* ===== DIV CONTAINER ALL ELEMENTS BLOCK ===== */
+	#body-container {
+	text-align: left;
+	width: 100%;
+	max-width: 978px;
+	margin: 0 auto 0 auto;
+	background-color: #333
+}
+
+	/* ===== MAIN ===== */
+	#main {
+		float:left;
+		position: relative;
+		width: 85%;
+		font-size: 100%;
+		padding: 12px;
+		background-color: #444;
+		border-radius: 5px;
+	}
+}
+
+#main h4 { margin: 2em 0 0 0}
 
 #main p {
 	line-height: 1.5em;
@@ -263,8 +283,8 @@ h4 {
 	
 	
 	.admincontrols { /* [edit] and [delete] */
-		font-size: 80%;
-		text-align: right;
+		font-size: 100%;
+		text-align: left;
 	}
 	
 	.buttonbar { text-align: center }
@@ -284,6 +304,7 @@ h4 {
 /* ===== FOOTER ===== */
 #footer {
 	clear: both;
+	text-align:center;
 	font-size: 80%;
 	color: #888;
 	padding: 5px;
@@ -291,6 +312,7 @@ h4 {
 
 span.post-category {
 	display: inline-block;
+	font-size: 80%;
 	font-weight: bold;
 	color:white;
 	position: absolute;
