--- a/greymatter/res/admin.css
+++ b/greymatter/res/admin.css
@@ -35,6 +35,7 @@ h2 {
 body {
 	background: #333;
 	font: 300 14px 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	min-width: 1000px;
 	}
 
 /* === Redefines some stuff in inline mode === */
