--- a/greymatter/res/column.css
+++ b/greymatter/res/column.css
@@ -51,6 +51,30 @@ Grey Matter CSS Styles
 	}
 }
 
+/* ===== INTERNET EXPLORER ===== */
+@media \0screen\,screen\9{
+	/* ===== COLUMN ===== */
+	#column {
+		float: right;
+		width: 20%;
+		font-size: 80% !important;
+		font-size: 75%;
+		height:1%;
+		margin-bottom: 5px;
+	}
+
+	#column h4 {
+		/* Titles of the sections */
+		text-transform: uppercase;
+		font-size: 14px;
+		font-weight: 700;
+		padding: 0 0 10px 50px;
+		margin-left: -50px;
+		display: inline-block;
+		border-bottom: 1px solid #c00;
+	}
+}
+
 #column p, #column div { margin: 10px 5px }
 
 #column a:link {
