--- a/greymatter/res/common.css
+++ b/greymatter/res/common.css
@@ -213,6 +213,31 @@ h4 {
 	}
 }
 
+/* ===== INTERNET EXPLORER ===== */
+@media \0screen\,screen\9{
+
+	/* ===== DIV CONTAINER ALL ELEMENTS BLOCK ===== */
+	#body-container {
+	text-align: left;
+	width: 100%;
+	max-width: 978px;
+	margin: 0 auto 0 auto;
+	padding: 5px;
+	background-color: #333
+}
+
+	/* ===== MAIN ===== */
+	#main {
+		float:left;
+		position: relative;
+		width: 74%;
+		font-size: 100%;
+		padding: 12px;
+		background-color: #444;
+		border-radius: 15px;
+	}
+}
+
 #main h4 { margin: 2em 0 0 0}
 
 #main p {
