--- a/greymatter/res/common.css
+++ b/greymatter/res/common.css
@@ -202,7 +202,7 @@ h4 {
 	#main {
 		float:left;
 		position: relative;
-		width: 85%;
+		width: 96%;
 		font-size: 100%;
 		padding: 12px;
 	}
@@ -245,7 +245,7 @@ h4 {
 /* === List === */
 #main ul {
 	list-style-type: disc;
-	padding: 0 0 0 .5em
+	padding: 0 0 0 2em
 }
 
 #main ol {
