--- a/greymatter/res/common.css
+++ b/greymatter/res/common.css
@@ -320,6 +320,34 @@ h4 {
 		margin-bottom: 1em
 	}
 
+	#main ul.share {
+		clear: both;
+		margin: 0.5em;
+		font-size: 0.8em;
+		list-style-type: none;
+		text-align: right;}
+
+	#main ul.share a{font-weight: bold;}
+		
+	#main span.facebook {
+		margin-left:10px;
+		background: url(../imgs/social/facebook-12x12.png) no-repeat;
+		padding-left:20px;
+		color: #444;
+		background-position: left;}
+		
+	#main span.twitter {
+		margin-left:10px;
+		background: url(../imgs/social/twitter-12x12.png) no-repeat;
+		padding-left:20px;
+		background-position: left;}
+	
+	#main span.googleplus {
+		margin-left:10px;
+		background: url(../imgs/social/google+-12x12.png) no-repeat;
+		padding-left:20px;
+		background-position: left;}
+
 
 /* ===== FOOTER ===== */
 #footer {
