--- a/greymatter/res/common.css
+++ b/greymatter/res/common.css
@@ -144,6 +144,7 @@ h4 {
 	font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	padding: 10px 10px 5px 25px;
 	background-color: #333;
+	position: relative;
 }
 
 #head a { color: white; text-decoration: none }
@@ -154,6 +155,44 @@ h4 {
 		color: #F1F1F1;
 		margin: .5em 0 0 0
 	}
+
+/* MENU*/
+#menu {
+	font-weight:bold;
+    text-transform: uppercase;
+    font-size: 0.9em;
+	margin: 0px auto;
+	padding: 30px;
+	text-align: right;
+	/*width: 960px;*/
+  	line-height:20px;
+  	float: right;
+}
+#menu ul{
+	height: 11px;
+	list-style: none;
+	margin: -10px auto;
+  padding: 5px 0 10px 0 !important;
+}
+#menu li{
+	padding: 0px 15px;
+	display: inline;
+  	border:none;  
+}
+
+#menu a {
+	color: #fc0;
+	text-decoration: none;
+	-webkit-transition: color 250ms;
+    -moz-transition: color 250ms;
+    transition: color 250ms;
+}
+
+#menu a:hover {
+	color: #f90;
+	text-decoration: none
+}
+
 
 /* ===== DIV CONTAINER "MAIN" ===== */
 #outer-container {
