Updated color when selecting theme in ACP

--- a/greymatter/res/admin.css
+++ b/greymatter/res/admin.css
@@ -343,7 +343,7 @@ input.maxsize, select.maxsize { width: 100% }
 }
 
 #available-themes ul li:hover {
-	background: #eee;
+	background: #696;
 	border: 1px solid #ddd;
 }
 
