Integrated bottom widget bar

--- a/greymatter/res/common.css
+++ b/greymatter/res/common.css
@@ -223,6 +223,15 @@ h4 {
 	  	line-height:20px;
 	  	float: right;
 	}
+
+#bottombar {
+	/* background:#fff; */
+	clear: both;
+	padding: 0px 0px 30px 0px;
+	text-align:left;
+	margin: 0px auto;
+}
+
 }
 
 /* ===== RESPONSIVE DESIGN ===== */
@@ -256,6 +265,15 @@ h4 {
 	  	line-height:25px;
 	  	float: right;
 	}
+
+#bottombar {
+	/* background:#fff; */
+	clear: both;
+	padding: 0px 0px 30px 0px;
+	text-align:center;
+	margin: 0px auto;
+}
+
 }
 
 /* ===== INTERNET EXPLORER ===== */
@@ -407,6 +425,22 @@ h4 {
 	color: #888;
 	padding: 5px;
 }
+
+/* BOTTOM BAR*/
+
+#bottombar ul {
+	list-style-type: none;
+	list-style-position: inside;
+}
+
+#bottombar div{
+	width:180px;
+  	width:230px !important;
+	margin:2px;
+	display:inline-block;
+	vertical-align:top;
+}
+
 
 span.post-category {
 	display: inline-block;
